<resources>
    <string name="app_name">FoodApp</string>
    <string name="welcome_back">welcome back</string>
    <string name="signin_to_countenue">Signin to countenue</string>
    <string name="username">username</string>
    <string name="person">Person</string>
    <string name="company">Company</string>
    <string name="signup">Signup</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>

    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string-array name="iAM">
        <item>Person</item>
        <item>Company</item>
    </string-array>

    <!-- activity-donate strings -->
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="images">Images</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="otherDetails">Street,Apartment Other Details</string>
    <string name="list">List</string>
    <string name="addressMap">Add a Address</string>

    <!-- activity-main strings -->
    <string name="loginTitle">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginForgotPassword">Forgot Password?</string>
    <string name="loginButton">Login</string>
    <string name="loginHaveAccount">Do Not Have Account?</string>
    <string name="loginCreatAccount">Create A New Account</string>

    <!-- activity-profile strings -->
    <string name="profileTitle">Profile</string>
    <string name="profileUpdate">Update</string>

    <!-- fragment-home strings -->
    <string name="homeButton">Donate</string>

    <!-- fragment-category strings -->
    <string name="categoryTitle">Categories</string>
    <string name="categorySubTitle1">Food</string>
    <string name="categorySubTitle2">Clothes</string>
    <string name="categorySubTitle3">Other</string>

    <!-- fragment-profile strings -->
    <string name="profileAdvert">Adverts</string>
    <string name="profileSettings">Settings</string>
    <string name="profileLanguage">Choose Language</string>
    <string name="profileAbout">About Us</string>

    <!-- fragment-settings strings -->
    <string name="deleteAccount">Delete Account</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_phone">We will send you an One Time Password on this mobile phone</string>
    <string name="enter_mobile_phone">Enter mobile phone</string>
    <string name="_90">+90 </string>
    <string name="_1234567890">-1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent">Enter the OTP sent</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? <b>Resend</b></string>

</resources>