<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".VerifyPhoneActivity">

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/send" />

    <LinearLayout
        android:id="@+id/phoneLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="#000" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_phone_number"
            android:textAlignment="center"
            android:textColor="#777777" />

        <EditText
            android:id="@+id/phoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:hint="+90xxxxxxxxx"
            android:inputType="phone"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textColorHint="#c5c5c5" />

        <Button
            android:id="@+id/phoneContinueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Continue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/codeLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Verification Code"
            android:textAlignment="center"
            android:textColor="#000" />

        <TextView
            android:id="@+id/codeSentDescription"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please Enter the verification code we sent \nto +90xxxxxxx"
            android:textAlignment="center"
            android:textColor="#777777" />

        <EditText
            android:id="@+id/codeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:hint="+90xxxxxxxxx"
            android:inputType="phone"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textColorHint="#c5c5c5" />

        <TextView
            android:id="@+id/resendCodeTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/didn_t_get_otp_resend"
            android:textAlignment="center"
            android:textColor="#777777" />

        <Button
            android:id="@+id/codeSubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Submit" />


    </LinearLayout>

</LinearLayout>